# PeopleCounter

./: CMakeLists.txt  CheckPeopleInOut.cpp  CheckPeopleInOut.h  FilterMovementFrame.cpp  FilterMovementFrame.h  FindPersonContour.cpp  FindPersonContour.h  FindPersonСontour.cpp  README.md  center.cpp  center.h  main.cpp  path.cpp  path.h
